# stupid-mc-proxy

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/protocol/: mod.rs  types.rs
src/protocol/client/: handshake.rs  login.rs  mod.rs  status.rs
src/protocol/server/: login.rs  mod.rs  status.rs
