[package]
name = "stupid-mc-proxy"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
log = "0.4.26"
clap = { version = "4.5.32", features = ["derive"] }
serde_json = "1.0.140"
uuid = "1.16.0"
dns-lookup = "2.0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
